--- a/notebooks/nb_90_IntroOfflineRL.ipynb
+++ b/notebooks/nb_90_IntroOfflineRL.ipynb
@@ -276,11 +276,15 @@
     "<img src=\"_static/images/nb_90_online_RL_cycle.png\" alt=\"Snow\" style=\"width:30%\">\n",
     "<div class=\"slide title\"> Fig.1 Online RL cycle </div>\n",
     "\n",
-    "**Online interaction isn't always practical or safe due to expensive or risky data collection, especially in fields like robotics and healthcare.**\n",
+    "**Why RL with data could be a very good approach**:\n",
     "\n",
-    "**Even when online interaction is possible, there's often a preference for using existing data. This is especially true in complex domains where big datasets are crucial for effective learning.**\n",
+    "- Online interaction isn't always practical or safe due to expensive or risky data collection, especially in fields like robotics and healthcare.\n",
     "\n",
-    "**Offline Reinforcement Learning (RL), also called Batch Reinforcement Learning, is a type of RL that uses large datasets collected beforehand for real-world applications on a large scale.**\n",
+    "- Even when online interaction is possible, there's often a preference for using existing data. This is especially true in complex domains where big datasets are crucial for effective learning.\n",
+    "\n",
+    "- Rewards could be complicated to build (think about self-driving cars) so if that knowledge is already present in your datasets you should use it. In offline RL you will need anyway to create a reward but it would be usually easier.\n",
+    "\n",
+    "**Offline Reinforcement Learning: also called Batch Reinforcement Learning, is a type of RL that uses large datasets collected beforehand for real-world applications on a large scale.**\n",
     "\n",
     "**With offline RL, the agent is trained using static datasets without any online interaction or exploration, which sets it apart from online RL methods.**"
    ]
@@ -321,11 +325,13 @@
     "As before, the goal is to minimize the discounted expected reward. However, as pictured in fig.2, this is also one of the main difference between on-line and offline-rl. In **online RL**:\n",
     "\n",
     "$$\n",
-    "J (\\pi) = \\mathbb{E}_{\\tau \\sim \\pi(a|s)}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right]\n",
+    "J (\\pi) = \\mathbb{E}_{\\tau \\sim \\pi(a|s)^{\\text{online}}}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right] \\simeq\n",
+    "{1 \\over n} \\sum_{i=0}^n R(\\tau_i)\n",
     "$$\n",
     "while in **offline RL**:\n",
     "$$\n",
-    "J (\\pi) = \\mathbb{E}_{\\tau \\sim D}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right]\n",
+    "J (\\pi) = \\mathbb{E}_{ \\color{red}{\\tau \\in D} \\sim \\pi(a|s)^{\\text{offline}}}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right] \\simeq\n",
+    "{1 \\over n} \\sum_{i=0}^n R(\\tau_i)\n",
     "$$\n",
     "with the dataset, $D = \\{ \\tau_i, i=1,..,n \\}$.\n",
     "\n",
@@ -337,6 +343,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**As shown in the previous slide, in offline RL, we try to find the best trajectories within the dataset, in contrast to online RL, where the goal is to find the best possible one in the entire space.**\n",
+    "\n",
+    "<img src=\"_static/images/nb_90_offline_vs_online_optimization.png\" alt=\"Snow\" style=\"width:100%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -344,7 +359,7 @@
    },
    "source": [
     "<img src=\"_static/images/90_online_vs_offline.png\" alt=\"Snow\" style=\"width:80%;\">\n",
-    "<div class=\"slide title\"> Fig.1 Online vs. Offline RL </div>\n",
+    "<div class=\"slide title\"> Fig.3 Online vs. Offline RL </div>\n",
     "\n",
     "**Note that $D$ doesn't necessarily need to be related to the specific task at hand, but it should be sufficiently representative (i.e., containing high-reward regions of the problem). If $D$ is derived from data collected from unrelated tasks, we will need to design our own reward function, just as we did in the online RL setting.**\n",
     "\n",
@@ -378,11 +393,11 @@
     "\n",
     "**Main differences between IL and offline RL:**\n",
     "\n",
-    "**1 - In IL, the policy closely mirrors the behavior policy so the collected data is attached to the task you want to solve.**\n",
+    "**1 - In IL, the policy closely mirrors the behavior policy so the collected data is attached to the task you want to solve so it must contain expert data.**\n",
     "\n",
-    "**2 - in offline RL, the aim is a superior policy, ideally close to the optimal one, and the data doesn't need to be related to the task to solve.** \n",
+    "**2 - in offline RL, the aim is a superior policy, ideally close to the optimal one, and the data doesn't need to be related to the task to solve and it can be far from optimal.** \n",
     "\n",
-    "**3 - In IL you don't need to create a reward function for your task**. Quite useful in situations where creating a reward function directly is not feasible, such as when training a self-driving vehicle."
+    "**3 - In IL you don't need to create a reward function for your task**. Quite useful in situations where creating a reward function directly is not feasible, such as when training a self-driving vehicle. **However, you need a reward function on offline RL**."
    ]
   },
   {
@@ -419,6 +434,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary so far**:\n",
+    "\n",
+    "- Online RL aims to find the best trajectories for a given task, whereas offline RL aims to find the best trajectories (combination of dataset trajectories) for the task within the provided dataset.\n",
+    "\n",
+    "- Offline RL can utilize datasets generated from different tasks, requiring the definition of rewards in such cases.\n",
+    "\n",
+    "- There are two primary approaches for offline learning: Imitation learning and Offline RL."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -451,26 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<img src=\"_static/images/nb_90_missing_point.png\" alt=\"offline_rl_1\" style=\"width:100%;\">\n",
-    "\n",
-    "**When working with datasets, sometimes important data is missing, especially if it's hard for the behavioral policy to collect (left figure). A good offline RL algorithm should be able to generate this missing data, which is impossible for imitation learning.**\n",
-    "\n",
-    "**On the other hand, if the data is missing because it's outside the behavior policy's capabilities (i.e., it's truly o.o.d. data), then the algorithm should detect this and avoid generating it. There could be valid reasons why these states were excluded during data collection.**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "**If you don't follow the explanation below, don't worry; just accept that once out of distribution (o.o.d.) occurs, it will be hard to return to in-distribution**\n",
     "\n",
@@ -499,6 +508,21 @@
     }
    },
    "source": [
+    "<img src=\"_static/images/nb_90_missing_point.png\" alt=\"offline_rl_1\" style=\"width:100%;\">\n",
+    "\n",
+    "**When working with datasets, sometimes important data is missing, especially if it's hard for the behavioral policy to collect (left figure). A good offline RL algorithm should be able to generate this missing data, which is impossible for imitation learning.**\n",
+    "\n",
+    "**On the other hand, if the data is missing because it's outside the behavior policy's capabilities (i.e., it's truly o.o.d. data), then the algorithm should detect this and avoid generating it. There could be valid reasons why these states were excluded during data collection.**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "**This is not a major issue in general but it is important to mention**:\n",
     "\n",
     "**The o.o.d. issues are not the only distributional shift effect in offline RL**.\n",
@@ -516,6 +540,19 @@
    },
    "source": [
     "**So far, we have focused on the differences between online and offline RL, but as we will see, there are many points of contact. We will later explore how different techniques from online RL, particularly those from off-policy RL, can be applied to offline RL.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary**:\n",
+    "\n",
+    "- In offline learning, it's important to avoid out-of-distribution (o.o.d.) data since there may be valid reasons why these points are excluded from the dataset. Additionally, transitioning back to in-distribution data after encountering o.o.d. data can be challenging. This is not a concern in online RL.\n",
+    "\n",
+    "- In offline learning, when data is missing from your dataset, it's difficult to predict whether it's due to collection issues or if it's truly an out-of-distribution (o.o.d.) case. Imitation Learning (IL) cannot address this issue, but Offline RL attempts to determine the situation. If the data belongs to the behavioral policy distribution, it should be added since it could lead the agent to a high-reward region.\n",
+    "\n",
+    "- If your dataset lacks representative data, there's little you can do, and the solution is to collect more high-quality data."
    ]
   },
   {
@@ -645,7 +682,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "224.719px"
+    "width": "184.1px"
    },
    "toc_section_display": true,
    "toc_window_display": true
