--- a/notebooks/nb_94_Offline_RL_theory.ipynb
+++ b/notebooks/nb_94_Offline_RL_theory.ipynb
@@ -327,7 +327,7 @@
     "<img src=\"_static/images/nb_94_q_value.png\" alt=\"offline_rl\" style=\"height:200px;\">\n",
     "\n",
     "\n",
-    "where we just replaced the reply buffer with the static dataset $D$.\n",
+    "where $D$ is the replay buffer, which in the offline RL case will be filled with the collected dataset.\n",
     "\n",
     "**As seen in the (Evaluation) step, the only potential out-of-distribution (o.o.d) issue arises when computing action $a'$, as all other values ($s$, $a$, $s'$) are from the dataset $D$.**\n",
     "\n",
@@ -342,7 +342,7 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/94_dqn_ood_case.png\" alt=\"offline_rl\" style=\"width:30%\">\n",
+    "<img src=\"_static/images/94_dqn_ood_case.png\" alt=\"offline_rl\" style=\"width:50%\">\n",
     "\n",
     "\n",
     "If during the evaluation loop:\n",
@@ -403,6 +403,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The other important aspect of the offpolicy method introduced earlier is that it implements a dynamic programming approach that is responsible for implementing the \"stitching\" property, which is crucial for connecting suboptimal trajectories into optimal ones**.\n",
+    "\n",
+    "<img src=\"_static/images/nb_94_stitching_property.png\" alt=\"offline_rl\" style=\"width:40%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "- Off-policy methods are strong candidates for offline RL. They assume a replay buffer, and if they implement a dynamic programming approach, they are suited to combine pieces of different trajectories into a new, better one.\n",
+    "\n",
+    "- However, they suffer from the overestimation problem when applied to data, which can cause the algorithm to easily go out of distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -420,20 +440,7 @@
     }
    },
    "source": [
-    "### Summary\n",
-    "\n",
-    "ToDo together."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Addressing Distributional Shift"
+    "## Addressing out of distribution issues"
    ]
   },
   {
@@ -446,7 +453,9 @@
    "source": [
     "### Overview\n",
     "\n",
-    "**The idea is to constraint the learned policy \"to be close\" to the behavioral one while still introducing a controlled distributional shift to enhance the policy without going out of distribution. This balancing act is a significant challenge and a focus of ongoing RL research.**"
+    "**The idea is to constraint the learned policy \"to be close\" to the behavioral one while still introducing a controlled distributional shift to enhance the policy without going out of distribution. This balancing act is a significant challenge and a focus of ongoing RL research.**\n",
+    "\n",
+    "<img src=\"_static/images/nb_94_distributional_shift.png\" alt=\"KL divergence\" width=40%>"
    ]
   },
   {
@@ -572,19 +581,6 @@
     }
    },
    "source": [
-    "$$\n",
-    "{\\hat Q}^{k+1} \\leftarrow L_1 = \\arg \\min_Q \\left[ {\\alpha} \\mathbb{E}_{s\\sim D, a \\sim \\mu(a|s)}[Q_\\phi(s, a)] +    \\mathbb{E}_{(s,a,s')\\sim D} \\left[\\left( Q_\\phi(s, a) - r(s, a) - \\gamma \\mathbb{E}_{a' \\sim\\pi_\\theta(a'|s')}[Q_\\phi(s', a')] \\right)^2 \\right] \\right]  \\tag{Evaluation}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "**These methods typically use the evaluation-improvement approach, introduced before, plus the $D_{KL}$ constraint**:\n",
     "\n",
     "$$\n",
@@ -614,11 +610,11 @@
     "**Technical comment**: We could incorporate this constraint as a Lagrange multiplier, or sometimes it is absorbed in the evaluation and improvement steps:\n",
     "\n",
     "$$\n",
-    "{\\hat Q}^{\\pi}_{k+1} \\leftarrow \\arg \\min_Q \\mathbb{E}_{(s,a,s')\\sim D} \\left[\\left( Q(s, a) -  r(s, a) + \\gamma \\mathbb{E}_{a' \\sim\\pi_k(a'|s')}[{\\hat Q}^{\\pi}_k(s', a')] -\\alpha\\gamma D_{KL}(\\pi_k(\\cdot|s'), \\pi_\\beta(\\cdot|s')) \\right)^2 \\right]\n",
+    "{\\hat Q}^{\\pi}_{k+1} \\leftarrow \\arg \\min_Q \\mathbb{E}_{(s,a,s')\\sim D} \\left[\\left( Q(s, a) -  r(s, a) + \\gamma \\mathbb{E}_{a' \\sim\\pi_k(a'|s')}[{\\hat Q}^{\\pi}_k(s', a')] -\\alpha D_{KL}(\\pi_k(\\cdot|s'), \\pi_\\beta(\\cdot|s')) \\right)^2 \\right]\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\pi_{k+1} \\leftarrow \\arg \\max_{\\pi} \\mathbb{E}_{s\\sim D} \\left[ \\mathbb{E}_{a \\sim\\pi(a|s)} Q^{\\hat{\\pi}_{k+1}}(s, a) -\\alpha\\gamma D_{KL}(\\pi_k(\\cdot|s), \\pi_\\beta(\\cdot|s)) \\right] \\\\\n",
+    "\\pi_{k+1} \\leftarrow \\arg \\max_{\\pi} \\mathbb{E}_{s\\sim D} \\left[ \\mathbb{E}_{a \\sim\\pi(a|s)} Q^{\\hat{\\pi}_{k+1}}(s, a) -\\alpha D_{KL}(\\pi_k(\\cdot|s), \\pi_\\beta(\\cdot|s)) \\right] \\\\\n",
     "$$\n",
     "\n",
     "that produces similar results, with the advantage that is much easier to implement from a technical point of view."
@@ -744,7 +740,7 @@
     "\n",
     "This is in perfect agreement with out previous interpretation in fig.5.\n",
     "\n",
-    "**Finally, as said before, these kind of methods implement an evaluation step, and eq.4, plays the role of the improvement step."
+    "**Finally, as said before, these kind of methods implement an evaluation step, and eq.4, plays the role of the improvement step.**"
    ]
   },
   {
@@ -795,11 +791,13 @@
    "source": [
     "#### Summary:\n",
     "\n",
-    "**Policy constraint methods are powerful, but they can often be too pessimistic, which is undesirable.**\n",
+    "- Policy constraint methods are able to fill gaps in the collected data to guide the agent to high-reward regions while also discouraging o.o.d. behavior. This can be achieved by constraining the density or the support of the policy, if you have access to the behavior policy. If you don't, methods like implicit policy constraints could be the way to go.\n",
     "\n",
-    "For example, if we know that a certain state has all actions yielding zero reward, we should not constrain the policy in this state, as could affect our neural network approximator. \n",
+    "- Policy constraint methods are powerful, but they can often be too pessimistic, which is undesirable.\n",
+    "  For example, if we know that a certain state has all actions yielding zero reward, we should not constrain the \n",
+    "  policy in this state, as could affect our neural network approximator. \n",
     "\n",
-    "**An alternative approach to avoid out-of-distribution (o.o.d) actions without directly constraining the policies is to control o.o.d behavior from a Q-function perspective.**"
+    "**An alternative approach to avoid o.o.d actions without directly constraining the policies is to control o.o.d behavior from a Q-function perspective.**"
    ]
   },
   {
@@ -857,7 +855,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Appendix: Short review of some popular offline RL algorithms (WIP)"
+    "# Appendix: Short review of some popular offline RL algorithms"
    ]
   },
   {
@@ -1089,7 +1087,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "234.8px"
+    "width": "282.2px"
    },
    "toc_section_display": true,
    "toc_window_display": true
