--- a/notebooks/nb_93_imitation_learning.ipynb
+++ b/notebooks/nb_93_imitation_learning.ipynb
@@ -31,8 +31,168 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<style>/*\nThis file is mainly copy-pasta from rise's examples\nhttps://github.com/damianavila/RISE/blob/master/examples/rise.css\nthat was further customized for appliedAI purposes\n*/\n@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n\n\n/*\nbody {\n    font-family: 'Work Sans', sans-serif !important;\n    text-transform: initial !important;\n    letter-spacing: initial !important;\n    font-weight: 400 !important;\n    line-height: 1.5 !important;\n    text-size-adjust: 100% !important;\n    ‑webkit‑text‑size‑adjust: 100% !important;\n}\n\n\n.reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n    font-size: 1.5rem !important;\n}\n*/\n\n.navbar-default .navbar-nav > li > a {\n    color: #00747b !important;\n}\n\n.filename {\n    font-size: 2.4rem !important;\n    color: #212529 !important;\n    font-weight: 600 !important;\n}\n\n.reveal, .md-slide {\n    color: white !important;\n}\n\nh1, h2 {\n    color: #00747b !important;\n}\n\nh3, h4, h5, h6 {\n    color: #808080 !important;\n}\n\n.reveal p, .reveal ol, .reveal dl, .reveal ul,\ndiv.text_cell_render {\n    color: #212529 !important;\n}\n\n/*copied from stackoverflow, better spacing between list items*/\nli + li {\n  margin-top: 0.2em;\n}\n\nbody.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n    margin-left: 0.1em;\n    margin-top: 0.2em;\n}\n\n.reveal .rendered_html h1:first-child,\n.reveal .rendered_html h2:first-child,\n.reveal .rendered_html h3:first-child,\n.reveal .rendered_html h4:first-child,\n.reveal .rendered_html h5:first-child {\n    margin-top: 0.2em;\n}\n\n/*\n.CodeMirror-lines, .output_text {\n    font-size: 1.5rem !important;\n}\n*/\n\nh1.plan, h2.plan, h3.plan {\n    text-align: center;\n    padding-bottom: 30px;\n}\n\nul.plan>li>span.plan-bold {\n    font-size: 110%;\n    padding: 4px;\n    font-weight: bold;\n    background-color: #eee;\n}\n\nul.plan>li>ul.subplan>li>span.plan-bold {\n    font-weight: bold;\n}\n\n.plan-strike {\n    opacity: 0.4;\n/*    text-decoration: line-through; */\n}\n\ndiv.plan-container {\n    display: grid;\n    grid-template-columns: 50% 50%;\n}\n\n/*\n * this is to void xarray's html output to show the fallback textual representation\n * see also\n   * xarray.md and\n   * https://github.com/damianavila/RISE/issues/594\n */\n.reveal pre.xr-text-repr-fallback {\n    display: none;\n}\n\n#toc-header, .toc-item li {\n    margin: auto !important;\n    color: #808080 !important;\n}\n\n#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n    margin: auto !important;\n    color: #00747b !important;\n}\n\n#toc-wrapper {\n    top: auto !important;\n    bottom: auto !important;\n    margin-top: 2rem !important;\n    color: #00747b !important;\n}\n\n\n#rise-header {\n    margin: 10px;\n    left: 5%;\n}\n\n#rise-footer {\n    margin: 10px;\n    right: 5%;\n}\n\n#rise-backimage {\n    opacity: 0.70;\n}\n\n.reveal img {\n    max-width: 100%;\n}\n\n\n.md-slide.title {\n    position: relative;\n    top: -50%;\n    margin-left: 5%;\n    font-size: 4em !important;\n    line-height: 1.6;\n}\n</style>"
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -55,8 +215,22 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n$\\newcommand{\\amax}{{\\text{argmax}}}$\n$\\newcommand{\\P}{{\\mathbb{P}}}$\n$\\newcommand{\\E}{{\\mathbb{E}}}$\n$\\newcommand{\\R}{{\\mathbb{R}}}$\n$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n$\\newcommand{\\N}{{\\mathbb{N}}}$\n$\\newcommand{\\C}{{\\mathbb{C}}}$\n$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1597,7 +1771,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "257.173px"
+    "width": "352.562px"
    },
    "toc_section_display": true,
    "toc_window_display": true
